# FastFormat

./: CHANGES.txt  CMakeLists.txt  INSTALL.md  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_examples.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
cmake/: TargetMacros.cmake
examples/: CMakeLists.txt
examples/example.arguments.boolean/: CMakeLists.txt  example.arguments.boolean.cpp
examples/example.arguments.character/: CMakeLists.txt  example.arguments.character.cpp
examples/example.arguments.reals/: CMakeLists.txt  example.arguments.reals.cpp
examples/example.arguments.void_pointers/: CMakeLists.txt  example.arguments.void_pointers.cpp
examples/example.ff_101/: CMakeLists.txt  example.ff_101.cpp
examples/example.ff_101.no_namespace/: CMakeLists.txt  example.ff_101.no_namespace.cpp
examples/example.flush/: CMakeLists.txt  example.flush.cpp
examples/example.inserter.hex/: CMakeLists.txt  example.inserter.hex.cpp
examples/example.inserter.integers/: CMakeLists.txt  example.inserter.integers.cpp
examples/example.inserter.integers.WindowsLargeIntegers/: CMakeLists.txt  example.inserter.integers.WindowsLargeIntegers.cpp
examples/example.inserter.reals/: CMakeLists.txt  example.inserter.reals.cpp
examples/example.iterators.format_iterator/: CMakeLists.txt  example.iterators.format_iterator.cpp
examples/example.memory.1/: CMakeLists.txt  example.memory.1.cpp
examples/example.overload.2.custom_type.filter_type/: CMakeLists.txt  example.overload.2.custom_type.filter_type.cpp
examples/example.overload.2.custom_type.inserter/: CMakeLists.txt  example.overload.2.custom_type.inserter.cpp
examples/example.overload.2.custom_type.string_access_shims/: CMakeLists.txt  example.overload.2.custom_type.string_access_shims.cpp
examples/example.overload.3.floatingpoint_columns/: CMakeLists.txt  example.overload.3.floatingpoint_columns.cpp
examples/example.overload.3.record_insert/: CMakeLists.txt  example.overload.3.record_insert.cpp
examples/example.overload.3.server_log/: CMakeLists.txt  example.overload.3.server_log.cpp
examples/example.overload.3.tabulations/: CMakeLists.txt  example.overload.3.tabulations.cpp
examples/example.pad.hash/: CMakeLists.txt  example.pad.hash.cpp
examples/example.sink.OutputDebugString/: CMakeLists.txt  example.sink.OutputDebugString.cpp
examples/example.sink.c_string/: CMakeLists.txt  example.sink.c_string.cpp
include/fastformat/: exceptions.hpp  fastformat.h  fastformat.hpp  ff.hpp  implicit_link.h  init_codes.h
include/fastformat/bundles/: openrj_bundle.hpp  properties_bundle.hpp  windows_resource_bundle.hpp  winini_bundle.hpp
include/fastformat/format/: standard_flags.hpp
include/fastformat/inserters/: LARGE_INTEGER.hpp  ULARGE_INTEGER.hpp  WindowsLargeIntegers.hpp  ch.hpp  character.hpp  integer.hpp  lc_i.hpp  real.hpp  storage_size.hpp  to_e.hpp  to_f.hpp  to_g.hpp  to_i.hpp  to_i_null_if_not.hpp  to_i_null_if_zero.hpp  to_x.hpp
include/fastformat/internal/: fastformat.c++.h  format_element.h  initialiser.hpp  shim_macros.h  stlsoft.h  string_encoding.h  threading.h
include/fastformat/iterators/: format_iterator.hpp
include/fastformat/quality/: contract.h  cover.h
include/fastformat/sinks/: ACE_CString.hpp  CComBSTR.hpp  CString.hpp  FILE.hpp  OutputDebugString.hpp  WindowsConsole.hpp  WindowsMessageBox.hpp  auto_buffer.hpp  c_string.hpp  char_buffer.hpp  exception.hpp  iostream.hpp  null.hpp  ostream.hpp  ribbon.hpp  shim_string.hpp  speech.hpp  string_array.hpp  stringstream.hpp  vectored_file.hpp
src/: CMakeLists.txt  api.cpp  enum_strings.cpp  fmt_cache.cpp  fmt_spec_defect_handlers.cpp  init_code_strings.cpp  memory_pool.cpp  replacements.cpp  snprintf.cpp  ximpl_core.hpp
test/: CMakeLists.txt
test/component/: CMakeLists.txt
test/component/test.component.FILE/: CMakeLists.txt  test.component.FILE.cpp
test/component/test.component.FILE_stream/: CMakeLists.txt  test.component.FILE_stream.cpp
test/component/test.component.format_specification_defect_exceptions/: CMakeLists.txt  test.component.format_specification_defect_exceptions.cpp
test/component/test.component.illformed_handlers/: implicit_link.cpp  test.component.illformed_handlers.cpp
test/component/test.component.inserter.hex/: CMakeLists.txt  test.component.inserter.hex.cpp
test/component/test.component.inserter.integer/: CMakeLists.txt  test.component.inserter.integer.cpp
test/component/test.component.inserter.plural/: implicit_link.cpp  test.component.inserter.plural.cpp
test/component/test.component.inserter.real/: CMakeLists.txt  test.component.inserter.real.cpp
test/component/test.component.iterators.format_iterator/: CMakeLists.txt  test.component.iterators.format_iterator.cpp
test/component/test.component.mismatched_handlers/: implicit_link.cpp  test.component.mismatched_handlers.cpp
test/component/test.component.sink.CComBSTR/: CMakeLists.txt  test.component.sink.CComBSTR.cpp
test/component/test.component.sink.auto_buffer/: CMakeLists.txt  test.component.sink.auto_buffer.cpp
test/component/test.component.sink.null/: CMakeLists.txt  test.component.sink.null.cpp
test/component/test.component.sink.ostream/: CMakeLists.txt  test.component.sink.ostream.cpp
test/component/test.component.sink.string.fmt/: CMakeLists.txt  test.component.sink.string.fmt.cpp
test/component/test.component.sink.string.write/: CMakeLists.txt  test.component.sink.string.write.cpp
test/component/test.component.sink.string_array/: CMakeLists.txt  test.component.sink.string_array.cpp
test/performance/test.performance.api.parse_format/: CMakeLists.txt  test.performance.api.parse_format.cpp
test/performance/test.performance.boost.karma/: CMakeLists.txt  test.performance.boost.karma.cpp
test/scratch/: CMakeLists.txt
test/scratch/test.scratch.FILE/: CMakeLists.txt  (+1 more)
test/scratch/test.scratch.sinks.shim_string/: CMakeLists.txt  test.scratch.sinks.shim_string.cpp
test/unit/: CMakeLists.txt
test/unit/test.unit.inserters.integer/: CMakeLists.txt  test.unit.inserters.integer.cpp
(+121 files in other folders)
